# auth0-ai-samples

./: .gitignore  README.md
.github/workflows/: create-sample-releases.yml
asynchronous-authorization/: README.md
asynchronous-authorization/langchain-fastapi-py/: README.md  release-config.yml
asynchronous-authorization/langchain-next-js/: .env.example  README.md  README_ja.md  package.json  release-config.yml
asynchronous-authorization/vercel-ai-next-js/: .env.example  .gitignore  README.md  package.json  release-config.yml
asynchronous-authorization/vercel-ai-node-js/: .env.example  .gitignore  README.md  package-lock.json  package.json  release-config.yml
authenticate-users/: README.md
authenticate-users/langchain-fastapi-py/: README.md  release-config.yml
authenticate-users/langchain-fastapi-py-starter/: release-config.yml
authenticate-users/langchain-next-js/: README.md  package-lock.json  package.json  release-config.yml
authenticate-users/next-js/: .env.local.example  README.md  package-lock.json  package.json
authenticate-users/vercel-ai-next-js/: README.md  package.json  release-config.yml
authenticate-users/vercel-ai-next-js-starter/: README.md  package.json  release-config.yml
authorization-for-rag/: README.md
authorization-for-rag/lanchain-js/: .gitignore  README.md  index.ts  package-lock.json  package.json
authorization-for-rag/langchain-js/: index.ts  (+5 more)
authorization-for-rag/langgraph-python/: .env.example  README.md  main.py  pyproject.toml  release-config.yml
call-apis-on-users-behalf/: README.md
docs/: aws-bedrock-setup.md
(+300 files in other folders)
